<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.CambioActivity">

    <include
        android:id="@+id/toolbarCambio"
        layout="@layout/toolbar_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llDetalhesMoedaCambio"
        android:layout_width="0dp"
        android:layout_height="171dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/drawable_personalizada"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarCambio"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvIsoENomeMoeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/arial_mt_black"
            android:importantForAccessibility="yes"
            android:text=""
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVariacaoMoedaCambio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/arial_th"
            android:importantForAccessibility="yes"
            android:text=""
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvValorCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/arial_th"
            android:importantForAccessibility="yes"
            android:text="@string/compra"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvValorVenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/arial_th"
            android:importantForAccessibility="yes"
            android:text="@string/venda"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvValorSaldoDisponivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/arial_th"
        android:importantForAccessibility="yes"
        android:text="@string/saldo_disponivel"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/llDetalhesMoedaCambio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/llDetalhesMoedaCambio"
        app:layout_constraintTop_toBottomOf="@+id/llDetalhesMoedaCambio" />

    <TextView
        android:id="@+id/tvValorMoedaEmCaixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/arial_th"
        android:importantForAccessibility="yes"
        android:text="@string/dolares_em_caixa"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvValorSaldoDisponivel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvValorSaldoDisponivel"
        app:layout_constraintTop_toBottomOf="@+id/tvValorSaldoDisponivel" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtQuantidade"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_personalizada"
        android:hint="@string/quantidade"
        android:importantForAccessibility="yes"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValorMoedaEmCaixa" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVender"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/botao_personalizado_desabilitado"
        android:enabled="false"
        android:fontFamily="@font/arial_th"
        android:importantForAccessibility="yes"
        android:text="@string/vender"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnComprar"
        app:layout_constraintStart_toStartOf="@id/edtQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantidade"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComprar"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/botao_personalizado_desabilitado"
        android:enabled="false"
        android:fontFamily="@font/arial_th"
        android:importantForAccessibility="yes"
        android:text="@string/comprar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtQuantidade"
        app:layout_constraintStart_toEndOf="@id/btnVender"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantidade"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>